demo/AWS/Demo/Network/route.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: route-aws-demo
  annotations:
    crossplane.io/paused: "false"
    crossplane.io/external-name: route-aws-demo
  labels:
    provider: AWS
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: routegw-aws-demo
    region: eu-west-1
    routeTableIdRef:
      name: rt-aws-demo
  providerConfigRef:
    name: aws-config
